<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search"
        android:iconTint="@color/black"
        android:orderInCategory="3"
        app:actionViewClass="android.widget.SearchView"/>
    <item
        android:id="@+id/clear_del"
        android:title="@string/clear_all"
        app:showAsAction="never"
        android:orderInCategory="4"
        />
    <item
        android:id="@+id/fav_main_m"
        android:title="@string/my_favourites_m_r"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:icon="@drawable/fav_main_m"
        />
    <item
        android:id="@+id/all_notes_m"
        android:title="@string/all_notes_m_r"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:icon="@drawable/no_note"/>
    <item
        android:id="@+id/import_db_id"
        android:title="@string/import_database"
        app:showAsAction="never"
        android:orderInCategory="6" />
    <item
        android:id="@+id/export_db_id"
        android:title="@string/export_database"
        app:showAsAction="never"
        android:orderInCategory="7" />
    <item
        android:id="@+id/delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never"
        android:orderInCategory="8" />
    <item
        android:id="@+id/restore_del"
        android:title="@string/restore_deleted"
        app:showAsAction="never"
        android:orderInCategory="5" />

</menu>