<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/unarchive"
        android:icon="@drawable/ic_baseline_unarchive_24"
        android:title="@string/unarchive"
        app:showAsAction="ifRoom"
        android:iconTint="@color/black"
        android:visible="false"
        />
    <item android:id="@+id/archive"
        android:icon="@drawable/ic_baseline_archive_24"
        android:title="@string/archive"
        app:showAsAction="ifRoom"
        android:iconTint="@color/black"
        android:visible="false"
        />
    <item android:id="@+id/retore"
        android:icon="@drawable/restore"
        android:title="@string/restore"
        app:showAsAction="ifRoom"
        android:iconTint="@color/black"
        android:visible="false"
        />
    <item android:id="@+id/save_"
        android:icon="@drawable/save_tick"
        android:title="@string/save_tb"
        app:showAsAction="always"
        />

</menu>